--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
 @coolcinema:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=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
+//npm.pkg.github.com/:_authToken=${COOLCINEMA_GH_PKG_TOKEN}
+
