--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   "license": "ISC",
   "packageManager": "pnpm@10.25.0",
   "dependencies": {
+    "@bufbuild/protobuf": "^2.11.0",
     "@coolcinema/cli": "^4.0.34",
     "@coolcinema/contracts": "^2.0.55",
     "@coolcinema/foundation": "^2.0.47",
     "@nestjs/common": "^11.1.12",
     "@nestjs/core": "^11.1.12",
     "@nestjs/microservices": "^11.1.12",
+    "add": "^2.0.6",
     "long": "^5.3.2",
     "nice-grpc": "^2.1.14",
     "nice-grpc-common": "^2.0.2",
     "nice-grpc-server-reflection": "^3.0.3",
+    "pnpm": "^10.28.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
   },
